--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ExamenLab5Progra2_CarlosNoe
-main.class=examenlab5progra2_carlosnoe.ExamenLab5Progra2_CarlosNoe
+main.class=examenlab5progra2_carlosnoe.GOGO
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
